--- a/index.html
+++ b/index.html
@@ -37,24 +37,26 @@
       };
     </script>
 
-<!-- meberikan border untuk belajar margin -->
+    <!-- meberikan border untuk belajar margin -->
     <!-- <style type="text/tailwindcss">
         *{
             border: solid red 1px;
         }
     </style> -->
-
   </head>
   <body>
-
-
-    <h1 class="text-6xl font-bold text-center my-10 ">
-        Mari Belajar
-     <span class="bg-gradient-to-r from-blue-500 to-teal-500 bg-clip-text text-transparent"> TailwindCSS</span> 
+    <h1 class="text-6xl font-bold text-center my-10">
+      Mari Belajar
+      <span
+        class="bg-gradient-to-r from-blue-500 to-teal-500 bg-clip-text text-transparent"
+      >
+        TailwindCSS</span
+      >
     </h1>
 
-    <section class="mb-10 bg-gradient-to-br from-indigo-300 via-red-600 to-yellow-300">
-
+    <section
+      class="mb-10 bg-gradient-to-br from-indigo-300 via-red-600 to-yellow-300"
+    >
       <h2 class="text-center text-2xl">Spacing</h2>
       <div class="m-13 text-center">Margin</div>
       <div class="py-10 text-right">padding</div>
@@ -100,5 +102,37 @@
         deleniti, expedita iusto laboriosam doloremque mollitia?
       </p>
     </section>
+
+    <div
+      class="max-w-xl h-96 bg-[#bada555] mx-auto mt-[42] overflow-y-scroll bg-local"
+      style="background-image:url(img/Htp_MBKM.jpg) ;"
+      <p class="p-5 text-2xl">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quas
+        magni nostrum sint molestias non animi eius magnam delectus cupiditate
+        perferendis quod quibusdam explicabo soluta expedita voluptatibus fuga,
+        fugit dolor enim sunt beatae voluptate quia in ipsam. Autem, nemo?
+        Tenetur saepe culpa magni, quidem obcaecati, accusamus iusto dolorum
+        totam illum asperiores corrupti maxime, voluptatibus aspernatur
+        accusantium animi. Quibusdam facilis similique delectus ipsa quisquam
+        ipsum, porro tempora dolorem sit quaerat sapiente. Sit voluptatum
+        nostrum numquam nemo dignissimos eveniet distinctio mollitia aperiam,
+        minus rem? Quisquam cupiditate ipsa voluptatum consequatur, dignissimos
+        sit repellat provident quam quaerat quo ratione labore laudantium,
+        impedit, rerum quia iste laboriosam placeat nemo. Officiis a architecto
+        nemo tempore reiciendis qui nostrum vero nulla eius illo iure quis
+        necessitatibus, ipsum ipsam labore ipsa? Harum, nam iure maxime maiores
+        accusamus voluptatibus consequuntur quos culpa possimus. Et commodi
+        rerum, autem consequuntur, modi neque repudiandae, officia iste vero
+        laboriosam hic tempore explicabo qui odit! Earum, nulla. Dolores fugiat
+        eum numquam explicabo ipsum quis, neque porro consequuntur aliquam iure
+        nam dolore incidunt nesciunt corrupti aperiam! Dolorum recusandae
+        quibusdam nihil enim facere sunt placeat culpa repudiandae cum itaque
+        natus quo sequi iusto laudantium ex tenetur velit, sed excepturi nam
+        perspiciatis nesciunt. Cum sint eveniet officia.
+      </p>
+    </div>
+   
+
+    <div class="mb-96"></div>
   </body>
 </html>
